--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ favicon: favicon.ico
 
 repository: wenxyabc/wenxyabc.github.io
 github_url: https://github.com/wenxyabc
-url: http://www.wenxyabc.com
+url: https://www.wenxyabc.com
 enforce_ssl: ityouknow.com
 
 ## Gem
